# conventional-commits-types

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
conventional_commits_types/: all.html  constant.SEPARATOR_COLON.html  constant.SEPARATOR_HASHTAG.html  enum.FooterSeparator.html  index.html  sidebar-items.js  struct.Commit.html  struct.Footer.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/str/: trait.FromStr.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: lib.rs
src/conventional_commits_types/: lib.rs.html
