[package]
name = "conventional-commits-types"
description = "A library defining conventional-commits types"
version = "0.2.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/conventional-commits-rs/conventional-commits-types"
readme = "README.md"
repository = "https://github.com/conventional-commits-rs/conventional-commits-types"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"], optional = true }
